# asterophage

./: .env  .gitignore  Cargo.toml
assets/: save_slots.ron
assets/models/: bile-node.glb  extractor.glb  machine_generator_centered.glb
src/: main.rs
src/building/: belt_system.rs  black_hole_system.rs  building_components.rs  building_systems.rs  conveyor_belt.rs  conveyor_belt_systems.rs  mod.rs
src/debug/: debug_components.rs  debug_systems.rs  mod.rs
src/general/: general_components.rs  general_systems.rs  mod.rs
src/player/: mod.rs  player_components.rs  player_systems.rs
src/save_and_load/: components.rs  mod.rs  systems.rs
src/utilities/: mod.rs  utility_methods.rs
src/world_grid/: components.rs  mod.rs  systems.rs  world_gird_components.rs  world_grid_systems.rs
src/world_grid/components/: mod.rs  yellow_bile.rs
