[package]
name = "asterophage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_xpbd_3d = "0.4.2"
bevy_editor_pls = "0.8.1"
bevy_framepace = "0.15.0"
bevy_mod_picking = { version = "0.18.2", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]}
bevy_turborand = "0.8.2"
bevy_vector_shapes = "0.7.0"
bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard" }
bevy_screen_diagnostics = "0.5.0"
dotenv = "0.15.0"
noisy_bevy = "0.6.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.20"
bevy_spatial = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1