[package]
name = "asterophage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0" }
avian3d = "0.2.0"
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
bevy_framepace = "0.18.0"
bevy_turborand = "0.10.0"
bevy_vector_shapes = "0.9.3"
bevy_mod_billboard = { git = "https://github.com/voximity/bevy_mod_billboard.git", branch = "migrate-0.15" }
bevy_screen_diagnostics = "0.6.0"
dotenv = "0.15.0"
noisy_bevy = "0.8.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
bevy-persistent = { version = "0.7.0", features = ["all"] }
dirs = { version = "5.0.1" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1